# primordial-soup

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  complementarity.yaml  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docs.yml
docs/: getting-started.md  index.md  research_questions.md  study_overview.md
docs/design/: analysis_and_experimentation.md  architecture.md  calibration_note.md  canonical_core.md  core_simulator.md  design_decisions.md  diminishing_returns_deferral.md  dynamic_opportunity_frontier.md  engineering_standards.md  environment_families.md  exec_intent_spec.md  (+14 more)
scripts/: attention_calibration_check.py  baseline_governance_campaign.py  calibration_sanity_check.py  cross_bundle_comparison.py  exec_belief_sensitivity.py  fragility_mapping.py  ground_truth_diagnostics.py  model0_campaign.py  ramp_period_study.py  right_tail_abundance_study.py  run_campaign_small.py  run_design.py  run_experiment.py  run_single.py  script_utils.py  staffing_intensity_study.py  validate_environment_families.py
templates/: run_design_template.yaml
tests/: conftest.py  test_bundle_validation.py  test_business_intent.py  test_campaign.py  test_config.py  test_diagnostics.py  test_evaluator.py  test_figures.py  test_frontier.py  test_governance.py  test_learning.py  test_noise.py  test_observation.py  test_policy.py  test_pool.py  test_presets.py  test_report_gen.py  test_reporting.py  test_run_bundle.py  test_runner.py  test_state.py  test_tables.py  test_tick.py  test_types.py  test_workbench.py
(+52 files in other folders)
